--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>chatbot</title>
     <!-- Linking google font for icons -->
     <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=keyboard_arrow_down,keyboard_arrow_up"
-    />
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+/>
   </head>
   <body>
     <div id="root"></div>
